# GoF

./: .gitignore  README.md
docs/: README.md  iterator.md  visitor.md
docs/behavioral/: command.md
java/: README.md  build.gradle.kts  settings.gradle.kts
java/behavioral/iterator/: build.gradle.kts
java/behavioral/observer/: build.gradle.kts
java/behavioral/visitor/: build.gradle.kts
java/structural/adapter/: build.gradle.kts
rust/: Cargo.toml  README.md
rust/behavioral/iterator/: Cargo.toml
rust/behavioral/iterator/src/: lib.rs  main.rs
rust/behavioral/observer/: Cargo.toml  README.md
rust/behavioral/observer/examples/: stock_ticker.rs
rust/behavioral/observer/src/: lib.rs
rust/behavioral/visitor/: Cargo.toml
rust/behavioral/visitor/src/: lib.rs
rust/creational/factory_method/: Cargo.toml  README.md
rust/creational/factory_method/examples/: dialog.rs
rust/creational/factory_method/src/: lib.rs
rust/src/: lib.rs
rust/src/behavioral/: chain_of_responsibility.rs  command.rs  interpreter.rs  iterator.rs  mediator.rs  memento.rs  observer.rs  state.rs  strategy.rs  template_method.rs  visitor.rs
rust/src/creational/: adapter.rs  bridge.rs  builder.rs  composite.rs  decorator.rs  facade.rs  factory.rs  flyweight.rs  mod.rs  prototype.rs  proxy.rs  singleton.rs
rust/src/structural/: abstract_factory.rs  facade.rs  flyweight.rs  mod.rs
rust/structural/adapter/: Cargo.toml  README.md
rust/structural/adapter/examples/: charging.rs
rust/structural/adapter/src/: lib.rs
scripts/: README.md  new_java_pattern.sh  new_rust_pattern.sh
(+65 files in other folders)
