[workspace]
members = [
    "creational/factory_method",
    "structural/adapter",
    "behavioral/observer",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
pretty_assertions = "1"

[workspace.metadata.gof]
patterns = ["creational", "structural", "behavioral"]
